manifests/valheim/dufs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valheim-dufs
  labels:
    app: valheim-dufs
  annotations:
    argocd.argoproj.io/hook: Skip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valheim-dufs
  template:
    metadata:
      labels:
        app: valheim-dufs
    spec:
      containers:
        - name: dufs
          image: sigoden/dufs:v0.42.0
          args:
            - --allow-all
            - /data
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: valheim-world-data
              mountPath: /data
      volumes:
        - name: valheim-world-data
          persistentVolumeClaim:
            claimName: valheim-world-data
---
apiVersion: v1
kind: Service
metadata:
  name: valheim-dufs
spec:
  selector:
    app: valheim-dufs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valheim
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "valheim-dufs"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - valheim.vanad.is
    secretName: valheim-vanad-is-tls

  rules:
  - host: valheim.vanad.is
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: valheim-dufs
            port:
              number: 80
